Trying to fix AppIT. Also added working DatabaseTestsIT.